kubernetes-v2/personal/applications/tools/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: tools
  namespace: tools
  labels:
    app: tools

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: tools
