kubernetes-v2/personal/applications/tools/ingress.yaml
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: tools-http
  namespace: tools

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tools.agrrh.com`)
      middlewares:
        - name: whitelist
          namespace: kube-system
      services:
        - kind: Service
          name: tools
          namespace: tools
          port: 80
